--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body style="background-color: rgb(126, 194, 126);">
     <p>Text</p>
 </body>
 <script src="./index.js"></script>
