--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>Document</title>
 </head>
 
-<body style="background-color: rgb(178, 126, 194);">
-    <p>Text</p>
-</body>
+<body></body>
 <script src="./index.js"></script>
 
 </html>
