add call buttons

--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./index.css">
     <title>Document</title>
 </head>
 
-<body></body>
+<body>
+    <div class="buttons container">
+        <button type="button" id="call">Start call</button>
+        <button type="button" id="answer">Answer</button>
+    </div>
+    <div class="renderers container">
+        <video id="localVideo" autoplay></video>
+        <video id="remoteVideo" autoplay></video>
+    </div>
+</body>
 <script src="./index.js"></script>
 
 </html>
