add hungup button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="buttons container">
         <button type="button" id="call">Start call</button>
         <button type="button" id="answer">Answer</button>
+        <button type="button" id="hungup">Hung up</button>
     </div>
     <div class="renderers container">
         <video id="localVideo" autoplay></video>
