add webSocket signaling

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <video id="remoteVideo" autoplay></video>
     </div>
 </body>
+<script src="./signaling.js"></script>
 <script src="./index.js"></script>
 
 </html>
