add stats and toggle video

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <video id="localVideo" autoplay></video>
         <video id="remoteVideo" autoplay></video>
     </div>
+    <div class="container invisible" id="callcontrols">
+        <button type="button" id="videotoggle">toggle video</button>
+    </div>
 </body>
 <script src="./signaling.js"></script>
 <script src="./index.js"></script>
