--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
     <div class="container invisible" id="callcontrols">
         <button type="button" id="videotoggle">toggle video</button>
     </div>
+    <div class="container">
+        <button type="button" id="openChat">Want to chat?</button>
+        <div class="chat invisible">
+            <div class="messages" id="messages">
+            </div>
+            <div class="container send">
+                <textarea id="message"></textarea>
+                <button type="button" id="sendMessage">Send</button>
+            </div>
+        </div>
+    </div>
 </body>
 <script src="./signaling.js"></script>
 <script src="./index.js"></script>
