--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+  <input id="roomId">
   <div class="buttons container">
     <button type="button" id="call">Start call</button>
     <button type="button" id="answer">Answer</button>
