hide firebase implementation in separate class

--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,7 @@
   </div>
 </body>
 <script src="./signaling.js"></script>
+<script src="./firebase.js"></script>
 <script src="./index.js"></script>
 
 </html>
