--- a/public/index.html
+++ b/public/index.html
@@ -63,8 +63,8 @@
     </div>
   </div>
 </body>
-<script src="./signaling.js"></script>
-<script src="./firebase.js"></script>
-<script src="./index.js"></script>
+<!-- <script src="./signaling.js"></script> -->
+<script defer src="./firebase.js"></script>
+<script defer src="./index.js"></script>
 
 </html>
